# pgtuner_mcp

./: .gitignore  Dockerfile  Dockerfile.streamable-http  README.md  pyproject.toml  requirements.txt  server.json  smithery.yaml
.github/workflows/: main_sfarqrq.yml  publish-docker.yml  publish-to-pypi.yml
src/pgtuner_mcp/: __init__.py  __main__.py  server.py
src/pgtuner_mcp.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
src/pgtuner_mcp/services/: __init__.py  hypopg_service.py  index_advisor.py  sql_driver.py
src/pgtuner_mcp/tools/: __init__.py  toolhandler.py  tools_health.py  tools_index.py  tools_performance.py  tools_query_history.py  tools_query_rewrite.py  tools_vacuum.py
tests/: __init__.py  conftest.py  test_resources.py  test_services.py  test_tools.py
